it didn't update before

--- a/index.html
+++ b/index.html
@@ -201,7 +201,11 @@
 
           <ul class="service-list">
 
-            
+            <li class="service-item">
+              <p> what is happening</p>
+
+
+            </li>
 
           </ul>
 
