--- a/index.html
+++ b/index.html
@@ -217,15 +217,15 @@
                     <h4 class="h4 timeline-item-title">University of California, Berkeley</h4>
       
                     <p class="timeline-text">
-                      <b>Bachelor of Science, Electrical Engineering and Computer Science</b>
+                      Bachelor of Science, Electrical Engineering and Computer Science
                     </p>
                     <span>2022 — 2024</span>
                     <p class="timeline-text">
-                      Relevant Courses: Designing Information Devices and System I & II (EECS16A & 16B), the Structure 
-                      and Interpretation of Computer Programs using Python (CS61A), Data Structure and 
-                      Algorithm using Java (CS61B), Computer Architecture (CS61C), Efficient Algorithms and 
-                      Intractable Programs (CS170) and Introduction to Artificial Intelligence (CS188), Computer Security (CS161) 
-                      and Cryptography (CS171)
+                      Relevant Courses: Designing Information Devices and System I & II, the Structure 
+                      and Interpretation of Computer Programs using Python, Data Structure and 
+                      Algorithm using Java, Computer Architecture, Efficient Algorithms and 
+                      Intractable Programs and Introduction to Artificial Intelligence, Computer Security
+                      and Cryptography
                     </p>
 
       
