adding more details

--- a/index.html
+++ b/index.html
@@ -239,6 +239,11 @@
                       Associates in Science and Mathematics
                     </p>
                     <span>2019 — 2022</span>
+                    <p class = "timeline-text">
+                      Introduction to Engineering, General Physics with Calculus, 
+                      Intro to Computer Programming, Programming using C++, Data Structure 
+                      and Algorithm.
+                    </p>
       
                   </li>
       
