--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
                     </p>
                     <span>June 2022 - August 2022</span>
                     <p class="timeline-text">
-                      <ul>
-                        <li>Programmed the unit with the latest software via use GIT, Quartus Prime Programmer & Eclipse.</li>
-                        <li>Reported and tracked bugs in JIRA, ensuring quick resolution in an agile environment.</li>
-                        <li>Executed comprehensive test plans and scripts to validate functionality and performance.</li>
+                      <ul class="timeline-text">
+                        <li class="timeline-text">Programmed the unit with the latest software via use GIT, Quartus Prime Programmer & Eclipse.</li>
+                        <li class="timeline-text">Reported and tracked bugs in JIRA, ensuring quick resolution in an agile environment.</li>
+                        <li class="timeline-text">Executed comprehensive test plans and scripts to validate functionality and performance.</li>
                       </ul>
                     </p>
 
