--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
-                <figure class="testimonials-avatar-box">
-                  <ion-icon name="code"></ion-icon>
-                </figure>
+                <div class="icon-box">
+                  <ion-icon name="laptop"></ion-icon>
+                </div>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Programming Languages</h4>
 
