--- a/index.html
+++ b/index.html
@@ -332,12 +332,14 @@
 
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
+                <div class="title-wrapper">
 
                 <div class="icon-box">
                   <ion-icon name="laptop"></ion-icon>
                 </div>
 
                 <h4 class="h4 testimonials-item-title" data-testimonials-title>Programming Languages</h4>
+              </div>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
