--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                   <ion-icon name="laptop"></ion-icon>
                 </div>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Programming Languages</h4>
+                <h4 class="h4">Programming Languages</h4>
               </div>
 
                 <div class="testimonials-text" data-testimonials-text>
