--- a/index.html
+++ b/index.html
@@ -449,6 +449,11 @@
         <header>
           <h2 class="h2 article-title">Resume</h2>
         </header>
+        <section class="h4">
+          <a href="./assets/images/resume2024.pdf" download="resume2024" class="btn btn-download">
+            Download Resume
+          </a>
+        </section>
 
         <section class="timeline">
 
