--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:richard@example.com" class="contact-link">dinakhatri@berkeley.edu</a>
+              <a href="mailto:dinakhatri@berkeley.edu" class="contact-link">dinakhatri@berkeley.edu</a>
             </div>
 
           </li>
@@ -703,8 +703,8 @@
 
         <section class="about-text">
           <p>
-            Feel free to reach out to me via email at dinakhatri@berkeley.edu. 
-            You can also connect with me on <a href= "https://www.linkedin.com/in/dina-khatri-589a59209/">LinkedIn</a>.
+            Feel free to reach out to me via email at <a href="mailto:dinakhatri@berkeley.edu" class="contact-link">dinakhatri@berkeley.edu</a>. 
+            You can also connect with me on <a href= "https://www.linkedin.com/in/dina-khatri-589a59209/" class="social-link">LinkedIn</a>.
           </p>
         </section>
 
