--- a/index.html
+++ b/index.html
@@ -703,8 +703,8 @@
 
         <section class="about-text">
           <p>
-            Feel free to reach out to me via email at <a href="mailto:dinakhatri@berkeley.edu" class="contact-link">dinakhatri@berkeley.edu</a>. 
-            You can also connect with me on <a href= "https://www.linkedin.com/in/dina-khatri-589a59209/" class="social-link">LinkedIn</a>.
+            Feel free to reach out to me via email at <a href="mailto:dinakhatri@berkeley.edu" class="btn btn-download">dinakhatri@berkeley.edu</a> 
+            You can also connect with me on <a href= "https://www.linkedin.com/in/dina-khatri-589a59209/" class="btn btn-download">LinkedIn</a>
           </p>
         </section>
 
