--- a/index.html
+++ b/index.html
@@ -607,10 +607,10 @@
 
     <div class="modal-content">
 
-      <h4 class="h3 modal-title" data-project-modal-title>Project Title</h4>
+      <h4 class="h3 modal-title" data-project-modal-title></h4>
 
       <div data-project-modal-text>
-        <p>Project description will go here.</p>
+        <p></p>
       </div>
 
       <div class="project-modal-skills" data-project-modal-skills>
