--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Oscilloscope, Circuit Design, Prototyping on Protoboard, HDMI Compliance Testing, Flicker Testing, Test Fixture Development, FANUC Robotic Arm Programming
+                    Oscilloscope, Circuit Design, HDMI Compliance Testing, Test Fixture Development, FANUC Robotic Arm Programming
                   </p>
                 </div>
 
@@ -475,7 +475,7 @@
         </section>
         <br>
         <div class="h5">
-          <p class ="testimonials-text">Last Updated August 2025</p>
+          <p class ="testimonials-text">Last Updated November 2025</p>
         </div>
 
       </article>
