--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Richard hanrick">Dina Khatri</h1>
 
-          <p class="title">Software Engineer</p>
+          <p class="title">Electrical & Software Engineer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
