--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Oscilloscope, Circuit Design, HDMI Compliance Testing, Test Fixture Development, FANUC Robotic Arm Programming
+                    Oscilloscope, HDMI Compliance Testing, Test Fixture Development, FANUC Robotic Arm Programming
                   </p>
                 </div>
 
